Avance pagina principal

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <div class="abstract hidden"></div>
 
                 <h2 class="main_element hidden">Bienvenido a flumind</h2>
+                <p class="main_element hidden">Selecciona una opción y comienza tu proceso a la tranquilidad</p>
+
+                <div class="options">
+                    <div class="option"></div>
+                    <div class="option"></div>
+                </div>
 
             </div>
 
