tabs de navegacion

--- a/index.html
+++ b/index.html
@@ -32,14 +32,22 @@
                 <h2 class="main_element hidden">Bienvenido a flumind</h2>
                 <p class="main_element hidden">Selecciona una opción y comienza tu proceso a la tranquilidad</p>
 
-                <div class="options">
+                <div class="main_element hidden">
                     <div class="option"></div>
                     <div class="option"></div>
-                </div>
-
+                </div>              
+                
             </div>
 
-        </div>        
+        </div>
+
+        <div class="tabs">
+            <div class="curved"></div>
+            <div class="tab tab1 active"></div>
+            <div class="tab tab2"></div>
+            <div class="tab tab3"></div>
+            <div class="tab tab4"></div>
+        </div>
 
         <script src="js/logoAnimation.js"></script>
         <script src="js/navegation.js"></script>
