--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         </div>
 
-        <div class="tabs">
+        <div class="tabs hidden">
             <div class="curved"></div>
             <div class="tab tab1 active"></div>
             <div class="tab tab2"></div>
