--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div id="tabs" class="tabs hidden">
                 <div id="curved" class="curved curved_home"></div>
-                <div class="tab tab1 curved_active"></div>
+                <div class="tab tab1_actived curved_active"></div>
                 <div class="tab tab2"></div>
                 <div class="tab tab3"></div>
                 <div class="tab tab4"></div>
