colores en activitysPage

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                 <h2 class="main_title">Actividades</h2>     
                 <div class="main_activity_icon">
-                    <div class="feel_selected"></div>
+                    <div id="feel_selected" class="feel_selected"></div>
                 </div>           
                 <p class="activity_desc desc">Selecciona una actividad dependiendo de tu tiempo y disposición</p>
 
@@ -153,6 +153,7 @@
         <script src="js/navegation.js"></script>
         <script src="js/mainPage.js"></script>
         <script src="js/feelPage.js"></script>
+        <script src="js/activitysPage.js"></script>
         
     </body>
 </html>
